--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,24 +1,2 @@
-<div class="container">
-  <div class="row">
-    <div class="col-lg-5">
-      Welcome to Nimbat Colony!
-    </div>
-  </div>
-  <div class="row">
-    <div class="col">
-      1
-    </div>
-    <div class="col">
-      2
-    </div>
-    <div class="col">
-      3
-    </div>
-    <div class="col">
-      4
-    </div>
-    <div class="col">
-      5
-    </div>
-  </div>
-</div>
+<app-banner></app-banner>
+<app-navigation></app-navigation>
