--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
 @use '@angular/material' as mat;
 
+@import url("https://fonts.googleapis.com/icon?family=Material+Icons");
+
 @import "styles/variables";
 
 @import "~bootstrap/scss/functions";
