press some buttons !

--- a/src/app/banner/banner.component.html
+++ b/src/app/banner/banner.component.html
@@ -1,8 +1,14 @@
-<div class="container-fluid">
+<div class="container-fluid update">
     <div class="row">
         <div class="col">
-            <h2>Version 1.1 is now out! Head over to the changelog to discover what's new! 
-                <button mat-flat-button>Changelog</button></h2>
+            <h5 style="text-align:center">Version 1.1 is now out! Head over to the <button mat-button><h5>changelog</h5></button> to discover what's new!</h5>
+        </div>
+    </div>
+</div>
+<div class="container-fluid vertical-banner">
+    <div class="row text-center">
+        <div class="col text-center">
+            <h4 style="text-align:left;vertical-align:center"><button mat-button (click)="toggleSidenav()"><img style="width: 50px; height: auto;"src="assets/newcomer mark.png"></button> NimbatColony.info</h4>
         </div>
     </div>
 </div>
