try to flush favico

--- a/src/app/banner/banner.component.html
+++ b/src/app/banner/banner.component.html
@@ -8,7 +8,7 @@
 <div class="container-fluid vertical-banner">
     <div class="row text-center">
         <div class="col text-center">
-            <h4 style="text-align:left;vertical-align:center"><button mat-button (click)="toggleSidenav()"><img style="width: 50px; height: auto;"src="assets/newcomer mark.png"></button> NimbatColony.info</h4>
+            <h4 style="text-align:left;vertical-align:center"><button mat-button (click)="toggleSidenav()"><img style="width: 30px; height: auto;padding-bottom: 10px"src="assets/newcomer mark.png"></button> NimbatColony.info</h4>
         </div>
     </div>
 </div>
