--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -2,7 +2,7 @@
     <mat-sidenav #sidenav [fixedInViewport]="true" mode="side">
         <div class="container-fluid">
             <div class="row">
-                <button mat-button [routerLink]=""><img style="width: 100px; height: auto;"
+                <button mat-button color="accent" routerLink=""><img style="width: 200px; height: auto;"
                         src="assets/newcomer mark.png">
                     <h5>NimbatColony.info</h5>
                 </button>
@@ -11,7 +11,7 @@
         <mat-divider></mat-divider>
         <div class="container-fluid">
             <div class="row">
-                <button mat-button [routerLink]="">
+                <button mat-button routerLink="">
                     <h5>Nimbat Taxonomy</h5>
                 </button>
             </div>
@@ -26,32 +26,37 @@
             </div>
             <div class="row" @flyInOut *ngIf="colonyCulture">
                 <mat-divider></mat-divider>
-                <button mat-button (click)="colonyCulture = !colonyCulture">
-                    <h5>Flight Proliferation</h5>
+                <button mat-button>
+                    <h6 style="text-align:left"><img style="width: 30px; height: auto;"
+                        src="assets/proliferation.png"> Flight Proliferation</h6>
                 </button>
             </div>
             <div class="row" @flyInOut *ngIf="colonyCulture">
                 <mat-divider></mat-divider>
-                <button mat-button (click)="colonyCulture = !colonyCulture">
-                    <h5>Flight Protection</h5>
+                <button mat-button routerLink="protection">
+                    <h6 style="text-align:left"><img style="width: 30px; height: auto;"
+                        src="assets/protection.png"> Flight Protection</h6>
                 </button>
             </div>
             <div class="row" @flyInOut *ngIf="colonyCulture">
                 <mat-divider></mat-divider>
-                <button mat-button (click)="colonyCulture = !colonyCulture">
-                    <h5>Flight Preservation</h5>
+                <button mat-button>
+                    <h6 style="text-align:left"><img style="width: 30px; height: auto;"
+                        src="assets/preservation.png"> Flight Preservation</h6>
                 </button>
             </div>
             <div class="row" @flyInOut *ngIf="colonyCulture">
                 <mat-divider></mat-divider>
-                <button mat-button (click)="colonyCulture = !colonyCulture">
-                    <h5>Flight Populace</h5>
+                <button mat-button>
+                    <h6 style="text-align:left"><img style="width: 30px; height: auto;"
+                        src="assets/populace.png"> Flight Populace</h6>
                 </button>
             </div>
             <div class="row" @flyInOut *ngIf="colonyCulture">
                 <mat-divider></mat-divider>
-                <button mat-button (click)="colonyCulture = !colonyCulture">
-                    <h5>Flight Progression</h5>
+                <button mat-button>
+                    <h6 style="text-align:left"><img style="width: 30px; height: auto;"
+                        src="assets/progression.png"> Flight Progression</h6>
                 </button>
             </div>
         </div>
@@ -89,7 +94,7 @@
         </div>
         <mat-divider></mat-divider>
     </mat-sidenav>
-    <mat-sidenav-content>
+    <mat-sidenav-content class="mat-app-background fill">
         <app-banner (toggleEvent)="sidenav.toggle()"></app-banner>
         <router-outlet></router-outlet>
     </mat-sidenav-content>
