--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,6 +2,7 @@
 @use '@angular/material' as mat;
 
 @import url("https://fonts.googleapis.com/icon?family=Material+Icons");
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
 
 @import "styles/variables";
 
@@ -17,37 +18,56 @@
 
 @import "styles/variables";
 
+@import "~@angular/material/theming";
 
+@include mat-core();
 
-@include mat.core();
+// generated custom palette
+$nimbat-primary-palette: (
+    50 : #fffcf9,
+    100 : #fef7f0,
+    200 : #fef2e6,
+    300 : #fdeddc,
+    400 : #fce9d5,
+    500 : #fce5cd,
+    600 : #fce2c8,
+    700 : #fbdec1,
+    800 : #fbdaba,
+    900 : #fad3ae,
+    A100 : #fad3ae,
+    A200 : #fad3ae,
+    A400 : #fad3ae,
+    A700 : #fad3ae,
+    contrast: (
+        50 : #000000,
+        100 : #000000,
+        200 : #000000,
+        300 : #000000,
+        400 : #000000,
+        500 : #000000,
+        600 : #000000,
+        700 : #000000,
+        800 : #000000,
+        900 : #000000,
+        A100 : #000000,
+        A200 : #000000,
+        A400 : #000000,
+        A700 : #000000,
+    )
+);
 
-// Define a light theme
-$light-primary: mat.define-palette(mat.$indigo-palette);
-$light-accent: mat.define-palette(mat.$pink-palette);
-$light-theme: mat.define-light-theme((
- color: (
-   primary: $light-primary,
-   accent: $light-accent,
- )
+$nimbat-secondary-palette: ();
+$nimbat-warn-palette: ();
+
+$primary: mat-palette($nimbat-primary-palette, 900, 500, 700);
+$secondary: mat-palette($nimbat-primary-palette, 900, 500, 700);
+$warn: mat-palette($nimbat-primary-palette, 900, 500, 700);
+
+$theme: mat.define-dark-theme((
+  color: (
+    primary: $nimbat-primary-palette,
+    accent: $nimbat-primary-palette,
+  )
 ));
-
-// Define a dark theme
-$dark-primary: mat.define-palette(mat.$pink-palette);
-$dark-accent: mat.define-palette(mat.$blue-grey-palette);
-$dark-theme: mat.define-dark-theme((
- color: (
-   primary: $dark-primary,
-   accent: $dark-accent,
- )
-));
-
-// Apply the dark theme by default
-@include mat.core-theme($dark-theme);
-@include mat.button-theme($dark-theme);
-
-// Apply the light theme only when the `.my-light-theme` CSS class is applied
-// to an ancestor element of the components (such as `body`).
-.my-light-theme {
- @include mat.core-color($light-theme);
- @include mat.button-color($light-theme);
-}
+// apply the dark theme
+@include angular-material-theme($theme);
