--- a/src/app/navigation/navigation.component.scss
+++ b/src/app/navigation/navigation.component.scss
@@ -1,6 +1,6 @@
-// mat-sidenav { 
-//     background-color: #6d604f;
-// }
+mat-sidenav { 
+    background-color: #6d604f;
+}
 
 h4 {
     color: #ffffff;
@@ -26,4 +26,5 @@ button {
  .fill { 
     min-height: 100vh;
     height: 100vh !important;
+    background-color: #fce5cd;
 }
