container-fluids are ok

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,14 @@
-<mat-card>Primarily from the notes of Nimbat researcher █████████, this site is a transcription of the details included in their extensive notes on the Nimbat species, and the Colony they reside in. There are plenty of readable portions of the book, though many more are currently illegible. A team of researchers are working to restore the pages, and the ones that are currently readable are archived here. As more pages become accessible, and more research is conducted, more will be added. Throughout the accounts, the researcher leaves a few personal notes, detailing their specific interactions with certain parts of the Colony itself.
+<div class="container-fluid">
+    <mat-card>Primarily from the notes of Nimbat researcher █████████, this site is a transcription of the details
+        included in their extensive notes on the Nimbat species, and the Colony they reside in. There are plenty of
+        readable portions of the book, though many more are currently illegible. A team of researchers are working to
+        restore the pages, and the ones that are currently readable are archived here. As more pages become accessible,
+        and more research is conducted, more will be added. Throughout the accounts, the researcher leaves a few
+        personal notes, detailing their specific interactions with certain parts of the Colony itself.
 
-It is recommended that only adult researchers access and use this site. Navigating from this page implies you understand that this site is for adults only.
+        It is recommended that only adult researchers access and use this site. Navigating from this page implies you
+        understand that this site is for adults only.
 
-Further information on lore development and usage can be found on the Logos and Lore Usage Guidelines page.
-</mat-card>
+        Further information on lore development and usage can be found on the Logos and Lore Usage Guidelines page.
+    </mat-card>
+</div>
