--- a/src/app/protection/protection.component.html
+++ b/src/app/protection/protection.component.html
@@ -1,4 +1,5 @@
-<mat-card>
+<div class="container-fluid">
+  <mat-card>
     <mat-card-title>Actions Buttons</mat-card-title>
     <mat-card-subtitle>Start</mat-card-subtitle>
     <mat-card-actions>
@@ -15,3 +16,4 @@
       <button mat-button>SHARE</button>
     </mat-card-actions>
   </mat-card>
+</div>
