--- a/src/app/protection/protection.component.html
+++ b/src/app/protection/protection.component.html
@@ -2,6 +2,17 @@
   <mat-card>
     <mat-card-title>Actions Buttons</mat-card-title>
     <mat-card-subtitle>Start</mat-card-subtitle>
+    <h5>Primarily from the notes of Nimbat researcher █████████, this site is a transcription of the details
+      included in their extensive notes on the Nimbat species, and the Colony they reside in. There are plenty of
+      readable portions of the book, though many more are currently illegible. A team of researchers are working to
+      restore the pages, and the ones that are currently readable are archived here. As more pages become accessible,
+      and more research is conducted, more will be added. Throughout the accounts, the researcher leaves a few
+      personal notes, detailing their specific interactions with certain parts of the Colony itself.
+
+      It is recommended that only adult researchers access and use this site. Navigating from this page implies you
+      understand that this site is for adults only.
+
+      Further information on lore development and usage can be found on the Logos and Lore Usage Guidelines page.</h5>
     <mat-card-actions>
       <button mat-button>LIKE</button>
       <button mat-button>SHARE</button>
@@ -11,6 +22,17 @@
   <mat-card>
     <mat-card-title>Actions Buttons</mat-card-title>
     <mat-card-subtitle>End</mat-card-subtitle>
+    <h5>Primarily from the notes of Nimbat researcher █████████, this site is a transcription of the details
+      included in their extensive notes on the Nimbat species, and the Colony they reside in. There are plenty of
+      readable portions of the book, though many more are currently illegible. A team of researchers are working to
+      restore the pages, and the ones that are currently readable are archived here. As more pages become accessible,
+      and more research is conducted, more will be added. Throughout the accounts, the researcher leaves a few
+      personal notes, detailing their specific interactions with certain parts of the Colony itself.
+
+      It is recommended that only adult researchers access and use this site. Navigating from this page implies you
+      understand that this site is for adults only.
+
+      Further information on lore development and usage can be found on the Logos and Lore Usage Guidelines page.</h5>
     <mat-card-actions align="end">
       <button mat-button>Like</button>
       <button mat-button>SHARE</button>
