colored theming changes

--- a/src/app/banner/banner.component.scss
+++ b/src/app/banner/banner.component.scss
@@ -1,14 +1,13 @@
-.vertical-banner { 
-    background-color: #6d604f;
-}
-
 h4 {
-    color: #ffffff;
+    color: #eae6d6;
     padding-top: 10px;
 }
 
+.light-link { 
+    color: #eea531
+}
 h5 { 
-    color: #000000;
+    color: #1c180d;
     padding-top: 10px;
     padding-bottom: 4px;
 }
