--- a/src/app/navigation/navigation.component.scss
+++ b/src/app/navigation/navigation.component.scss
@@ -1,14 +1,14 @@
 mat-sidenav { 
-    background-color: #6d604f;
+    background-color: #8a7942;
 }
 
 h4 {
-    color: #ffffff;
+    color: #eae6d6;
     padding-top: 10px;
 }
 
 h5, h6 { 
-    color: #000000;
+    color: #eae6d6;
     padding-top: 10px;
     padding-bottom: 4px;
 }
