--- a/src/app/banner/banner.component.html
+++ b/src/app/banner/banner.component.html
@@ -6,7 +6,7 @@
         </div>
         <div class="col-11">
             <h5 style="text-align:center">Version 1.1 is now out! Head over to the <button mat-button>
-                    <h5>changelog</h5>
+                    <h5 class="light-link">changelog</h5>
                 </button> to discover what's new!</h5>
         </div>
     </div>
