--- a/src/app/protection/protection.component.scss
+++ b/src/app/protection/protection.component.scss
@@ -1,4 +1,8 @@
 mat-card { 
-    background-color: #6d604f;
+    background-color: #c1b485;
     font-family: inherit;
+}
+
+h5 { 
+    color: #1c180d;
 }
