we now have a persistent footer, very pog

--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -115,5 +115,6 @@
     <mat-sidenav-content class="mat-app-background fill">
         <app-banner (toggleEvent)="sidenav.toggle()"></app-banner>
         <router-outlet></router-outlet>
+        <app-footer></app-footer>
     </mat-sidenav-content>
 </mat-sidenav-container>
