--- a/src/app/banner/banner.component.scss
+++ b/src/app/banner/banner.component.scss
@@ -3,8 +3,9 @@ h4 {
     padding-top: 10px;
 }
 
-.light-link { 
-    color: #eea531
+a { 
+    text-decoration: none;
+    color: #a8721a;
 }
 h5 { 
     color: #1c180d;
