--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -6,3 +6,12 @@ mat-card {
 h5 { 
     color: #1c180d;
 }
+
+.notes {
+    font-family: 'Architects Daughter';
+}
+
+a { 
+    text-decoration: none;
+    color: #a8721a;
+}
