usage + guidelines page

--- a/src/app/usage-guidelines/usage-guidelines.component.html
+++ b/src/app/usage-guidelines/usage-guidelines.component.html
@@ -71,20 +71,47 @@
             <h3>NimbatColony.info Developer Profiles</h3>
         </mat-card-title>
         <div class="container-fluid">
-            <div class="row">
-                <div class="col">
-                    <img src="assets/developer-profiles/finn.jpg">
+            <div class="row justify-content-center">
+                <div class="col-5">
+                    <h4 style="text-align:end">Finn Heartlin</h4>
+                    <h6 style="text-align:end"><a href="https://www.google.com/url?q=https%3A%2F%2Ftwitter.com%2Fmurrchmadness&sa=D&sntz=1&usg=AOvVaw1QssskujCvtqDYNyT9jKTR">@MurrchMadness</a></h6>
+                    <h6 style="text-align:end">Lead Designer</h6>
+                    <h5 style="text-align:end">Finn's a communications student based out of New England, </h5>
+                    <h5 style="text-align:end">with a background in screenwriting and graphic design.</h5>
                 </div>
-                <div class="col">
-                    <img src="assets/developer-profiles/frequency.png">
+                <div class="col-1">
+                    <img src="assets/developer-profiles/finn.jpg" style="width: 150px; height:auto;">
+                </div>
+                <div class="col-1">
+                    <img src="assets/developer-profiles/frequency.png" style="width: 150px; height:auto;">
+                </div>
+                <div class="col-5">
+                    <h4>Frequency</h4>
+                    <h6><a href="https://www.google.com/url?q=https%3A%2F%2Ftwitter.com%2Fampfrequency&sa=D&sntz=1&usg=AOvVaw02q19DabwsFBehH9gteubi">@AmpFrequency</a></h6>
+                    <h6>Lead Writer</h6>
+                    <h5>Frequency's a biology student from the Midwest,</h5>
+                    <h5> with further studies in anthropology.</h5>
                 </div>
             </div>
             <div class="row">
-                <div class="col">
-                    <img src="assets/developer-profiles/takeo.png">
+                <div class="col-5">
+                    <h4 style="text-align:end">Takeo</h4>
+                    <h6 style="text-align:end"><a href="https://www.google.com/url?q=https%3A%2F%2Ftwitter.com%2Ftak__eo&sa=D&sntz=1&usg=AOvVaw3J8ltDLiYWSao-1EJHQQa3">@tak_eo</a></h6>
+                    <h6 style="text-align:end">Lead Artist</h6>
+                    <h5 style="text-align:end">Part-time artist; Full-time problem.</h5>
                 </div>
-                <div class="col">
-                    <img src="assets/developer-profiles/arcfire.png">
+                <div class="col-1">
+                    <img src="assets/developer-profiles/takeo.png" style="width: 150px; height:auto;">
+                </div>
+                <div class="col-1">
+                    <img src="assets/developer-profiles/arcfire.png" style="width: 150px; height:auto;">
+                </div>
+                <div class="col-5">
+                    <h4>Arcfire</h4>
+                    <h6><a href="https://www.google.com/url?q=https%3A%2F%2Ftwitter.com%2FArcfireFox&sa=D&sntz=1&usg=AOvVaw3FDfgw0XzOgWV_r4316WiI">@ArcfireFox</a></h6>
+                    <h6>Lead Web Developer</h6>
+                    <h5>Foxy menace stuck in the Southwest,</h5>
+                    <h5>  who happens to develop websites.</h5>
                 </div>
             </div>
         </div>
