properly resizing images based on viewport, etc.

--- a/src/app/usage-guidelines/usage-guidelines.component.html
+++ b/src/app/usage-guidelines/usage-guidelines.component.html
@@ -80,10 +80,12 @@
                     <h5 style="text-align:end">with a background in screenwriting and graphic design.</h5>
                 </div>
                 <div class="col-1">
-                    <img src="assets/developer-profiles/finn.jpg" style="width: 150px; height:auto;">
+                    <img src="assets/developer-profiles/finn.jpg" style="width: 100%; height:auto;">
+                    <h6 style="text-align:end"><small style="font-size:0.75rem;">Art by <a href="https://www.google.com/url?q=https%3A%2F%2Fwww.furaffinity.net%2Fuser%2Fbastika%2F&sa=D&sntz=1&usg=AOvVaw0iJsgSpXHqOe1jo-invm_Y">Bastika</a></small></h6>
                 </div>
                 <div class="col-1">
-                    <img src="assets/developer-profiles/frequency.png" style="width: 150px; height:auto;">
+                    <img src="assets/developer-profiles/frequency.png" style="width: 100%; height:auto;">
+                    <p><small style="font-size:0.75rem;">Art by <a href="https://www.google.com/url?q=https%3A%2F%2Fwww.furaffinity.net%2Fuser%2Fhotcoffeecat%2F&sa=D&sntz=1&usg=AOvVaw2yA-P8DPQBCb_MKXPOkaWn">HotCoffeeCat</a></small></p>
                 </div>
                 <div class="col-5">
                     <h4>Frequency</h4>
@@ -101,10 +103,12 @@
                     <h5 style="text-align:end">Part-time artist; Full-time problem.</h5>
                 </div>
                 <div class="col-1">
-                    <img src="assets/developer-profiles/takeo.png" style="width: 150px; height:auto;">
+                    <img src="assets/developer-profiles/takeo.png" style="width: 100%; height:auto;">
+                    <h6 style="text-align:end"><small style="font-size:0.75rem;">Art by <a href="https://www.google.com/url?q=https%3A%2F%2Ftwitter.com%2Ftak__eo&sa=D&sntz=1&usg=AOvVaw3J8ltDLiYWSao-1EJHQQa3">Takeo</a></small></h6>
                 </div>
                 <div class="col-1">
-                    <img src="assets/developer-profiles/arcfire.png" style="width: 150px; height:auto;">
+                    <img src="assets/developer-profiles/arcfire.png" style="width: 100%; height:auto;">
+                    <h6><small style="font-size:0.75rem;">Art by <a href="https://www.google.com/url?q=https%3A%2F%2Ftwitter.com%2Fmaftydoesart&sa=D&sntz=1&usg=AOvVaw08j9m0Z2Bu6HjmGyocOZp6">Mafty</a></small></h6>
                 </div>
                 <div class="col-5">
                     <h4>Arcfire</h4>
