add taxonomy and change top banner

--- a/src/app/banner/banner.component.html
+++ b/src/app/banner/banner.component.html
@@ -1,11 +1,11 @@
 <div class="container-fluid update">
     <div class="row">
         <div class="col-1">
-            <button mat-button (click)="toggleSidenav()"><img style="width: 30px; height: auto;padding-bottom: 10px"
-                    src="assets/newcomer mark.png"></button>
+            <button mat-button (click)="toggleSidenav()"><img style="width: 40px; height: 100%"
+                    src="assets/eggshell/newcomer-mark.png"></button>
         </div>
         <div class="col-11">
-            <h5 style="text-align:center">Version 1.1 is now out! Head over to the <a routerLink="/changelog">changelog</a> to discover what's new!</h5>
+            <h5 style="text-align:center">The Nimbat Colony <a href="https://www.patreon.com/nimbatcolony">Patreon</a> is now live! Please consider supporting us, and check out the site 'u'</h5>
         </div>
     </div>
 </div>
