--- a/src/app/banner/banner.component.scss
+++ b/src/app/banner/banner.component.scss
@@ -5,10 +5,10 @@ h4 {
 
 a { 
     text-decoration: none;
-    color: #a8721a;
+    color: #eea531;
 }
 h5 { 
-    color: #1c180d;
+    color: #eae6d6;
     padding-top: 10px;
     padding-bottom: 4px;
 }
@@ -22,4 +22,9 @@ button {
 .mat-flat-button {
     margin-left: -10%;
     margin-right: -10%;
+}
+
+.update { 
+    background-color: #8a7942;
+    margin-bottom: 10px;
 }
