--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -11,7 +11,7 @@
         <mat-divider></mat-divider>
         <div class="container-fluid">
             <div class="row">
-                <button mat-button routerLink="">
+                <button mat-button routerLink="/taxonomy">
                     <h5>Nimbat Taxonomy</h5>
                 </button>
             </div>
