add bookends and start patreon stuff

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,8 @@
 <div class="container-fluid">
     <mat-card>
-        <mat-card-title>The Nimbat Colony</mat-card-title>
+        <mat-card-title>
+            <h3>The Nimbat Colony</h3>
+        </mat-card-title>
         <mat-card-content>
             <h5>Primarily from the notes of Nimbat researcher █████████, this site is a transcription of the details
                 included in their extensive notes on the Nimbat species, and the Colony they reside in. There are plenty
@@ -21,6 +23,64 @@
             <h5>
                 Further information on lore development and usage can be found on the Logos and Lore Usage Guidelines
                 page.</h5>
+        </mat-card-content>
+    </mat-card>
+</div>
+<div class="container-fluid">
+    <mat-card>
+        <mat-card-title>
+            <h3>Patreon Supporters</h3>
+        </mat-card-title>
+        <mat-card-subtitle>
+            <h5>These members of the community help us develop NimbatColony.info by donating to our <a
+                    class="light-link" href="">Patreon</a>! If you'd like a spot among them here, please consider
+                supporting us!</h5>
+        </mat-card-subtitle>
+        <mat-card-content>
+            <div class="row">
+                <div class="col-md-1 offset-md-4">
+                    <img style="width: 50px; height: auto;" class="col"
+                        src="assets/bookends/oathsworn-mark-left-bookend.png">
+                </div>
+                <div class="col-2">
+
+                    <h3 style="text-align:center">
+                        Oathsworn
+                    </h3>
+                </div>
+                <div class="col-5">
+
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col" style="text-align:end">
+                        <h5>Flintlocke</h5>
+                    </div>
+                    <div class="col">
+                        <h5>Rarelygood</h5>
+                    </div>
+                </div>
+            </div>
+            <h4 style="text-align:center;">
+                Devoted
+            </h4>
+            <h4 style="text-align:center;">
+                Loyal
+            </h4>
+            <div class="container">
+                <div class="row">
+                    <div class="col">
+                        <h6 style="text-align:center;">Sepa Ixen</h6>
+                    </div>
+                </div>
+            </div>
+            <h4 style="text-align:center;">
+                Peon
+            </h4>
+            <h4 style="text-align:center;">
+                Avid
+            </h4>
         </mat-card-content>
     </mat-card>
 </div>
